--- a/ridge-regression-ellipsoids.ipynb
+++ b/ridge-regression-ellipsoids.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPur+l7I/GCt5rxZcsrdV0h",
+      "authorship_tag": "ABX9TyNHNaYz1kzUsjMirwhrdFsb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/zostaw/learning-regression-methods/blob/main/ridge_regression_ellipsoids.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/zostaw/learning-regression-methods/blob/main/ridge-regression-ellipsoids.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "Gje86TwVy8T3"
       },
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "KmZfVf32pt8U"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         },
         "outputId": "d3a99385-b1ce-44cd-c7ed-f25fdc286daa"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -162,7 +162,7 @@
         },
         "outputId": "8950475e-cd07-416f-b247-402b44d91380"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
         },
         "outputId": "e2b0d6c4-23db-4e80-b1db-32230aa6a8b1"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
         },
         "outputId": "ddecab2c-88e5-4f9f-a413-0601e1f95248"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -392,12 +392,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## TO BE CONTINUED..."
+      ],
+      "metadata": {
+        "id": "wcXDmszsNiLs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "_FoIPvWwLbDE"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     }
   ]
